# sbb-ml-android

./: Contributing.md  ReleaseNotes.md  build.gradle  gradle.properties  readme.md  sbbml_nexus_publish.gradle  settings.gradle  version-code.gradle
.github/workflows/: android.yml  android_tests.yml  publish_to_maven.yml
.reuse/: dep5.txt
LICENSES/: CC0-1.0.txt  GFDL-1.3.or.later.txt  MIT.txt
demoapp/: build.gradle
demoapp/src/main/: AndroidManifest.xml
demoapp/src/main/assets/: wagen_yolov5n_448_int8.tflite  wagen_yolov5n_512_int8.tflite  wagen_yolov5n_576_int8.tflite
demoapp/src/main/res/drawable/: item_selector.xml
demoapp/src/main/res/layout/: bottom_sheet.xml  camera_view.xml  deviceview_row.xml  imgsizeview_row.xml  modelview_row.xml  typeview_row.xml
demoapp/src/main/res/values/: colors.xml  strings.xml  (+1 more)
sbbml/: CMakeLists.txt  build.gradle
sbbml/src/androidTest/java/ch/sbb/mobile/ml/: CameraPreviewTest.java  FrameProcessorTest.java  ImageUtilsTest.java  MultiBoxTrackerTest.java  ObjectDetectorTest.java  TestHelper.java
sbbml/src/main/: AndroidManifest.xml
sbbml/src/main/cpp/: imageutils_jni.cc
sbbml/src/main/cpp/object_tracking/: object_tracker_jni.cc
sbbml/src/main/java/ch/sbb/mobile/ml/: AutoFitTextureView.java  CameraPreview.java  FrameProcessor.java  ImageUtils.java  MLFragment.java  MLRecognition.java  MLSettings.java  MLView.java  MultiBoxTracker.kt  ObjectTracker.kt  OverlayView.java  Recognition.java  TFLiteObjectDetector.java
sbbml/src/main/res/layout/: camera_fragment.xml
scripts/: publish_module.gradle  publish_root.gradle
(+5 files in other folders)
